Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ mail -s "KeySigning Party in Buenos Aires" anibal@debian.org \
 
 <p>At TODO, if you want your name linked to your photo, send an email to <a href="mailto:anibal@debian.org">anibal@debian.org</a>. </p>
 
-<p>On Wednesday 31. March, 2015 you will be able to fetch the complete keyring (ksp-ba.gpg.bz2) with all the keys that were submitted along with a text file (ksp-ba.txt) giving the fingerprint of each key on the ring. </p>
+<p>On Wednesday 31. March, 2015 you will be able to fetch the complete keyring (ksp-ba.gpg.bz2) with all the keys that were submitted along with a text file (<a href="https://raw.githubusercontent.com/oerdnj/dns-oarc-keysigning/master/ksp-ba.txt">ksp-ba.txt</a>) giving the fingerprint of each key on the ring. </p>
 
 <p>At TODO both the keyring and text files will have corresponding files with their SHA256 checksums. The SHA256 files will be signed with public key 0x0C99B70EF4FCBB07, which can be downloaded from keyring.debian.org or other public keyservers. </p>
 
@@ -156,14 +156,14 @@ mail -s "KeySigning Party in Buenos Aires" anibal@debian.org \
 <p>sha256sum ksp-ba.txt </p>
 </li>
 <li>
-<p>Bring the hash you computed and a hardcopy of ksp-ba.txt to Buenos Aires. </p>
+<p>Bring the hash you computed and a hardcopy of <a href="https://raw.githubusercontent.com/oerdnj/dns-oarc-keysigning/master/ksp-ba.txt">ksp-ba.txt</a> to Buenos Aires. </p>
 
 <ul>
 <li>It is very important that you have verified at home the fingerprints of your keys on the hardcopy. </li>
 <li>It is also very important that you have computed the hash at home. </li>
 </ul>
 </li>
-<li><p>The SHA256 hash of ksp-ba.txt will be announced during the discussion/information session. Verify that the hashes match what you computed. This guarantees that all participants are working from the same list of keys. </p></li>
+<li><p>The SHA256 hash of <a href="https://raw.githubusercontent.com/oerdnj/dns-oarc-keysigning/master/ksp-ba.txt">ksp-ba.txt</a> will be announced during the discussion/information session. Verify that the hashes match what you computed. This guarantees that all participants are working from the same list of keys. </p></li>
 <li>
 <p>During DNS-OARC 24 and IETF 95, look for keysigning participants during the conference. </p>
 
@@ -177,7 +177,7 @@ mail -s "KeySigning Party in Buenos Aires" anibal@debian.org \
 <li>If you are satisfied with the identification, mark on your hardcopy that the other participant's gpg fingerprints are correct and the other participant has been identified. </li>
 </ol>
 </li>
-<li><p>Later that evening, or perhaps when you get home, you can sign the keys in ksp-ba.txt which you were able to verify and identify. </p></li>
+<li><p>Later that evening, or perhaps when you get home, you can sign the keys in <a href="https://raw.githubusercontent.com/oerdnj/dns-oarc-keysigning/master/ksp-ba.txt">ksp-ba.txt</a> which you were able to verify and identify. </p></li>
 </ul>
 
 <p>Please use caff to sign keys, one of the scripts of pgp-tools. The scripts are also available as the debian package signing-party. </p>
@@ -185,10 +185,12 @@ mail -s "KeySigning Party in Buenos Aires" anibal@debian.org \
 <h2>
 <a id="downloads" class="anchor" href="#downloads" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Downloads</h2>
 
-<pre><code>ksp-ba.txt - List of participants (text file). 
-
-ksp-ba.gpg.bz2 - Participating keys (keyring). 
-</code></pre>
+<ul>
+<li>
+<a href="https://raw.githubusercontent.com/oerdnj/dns-oarc-keysigning/master/ksp-ba.txt">ksp-ba.txt</a> - List of participants (text file). </li>
+<li>
+<a href="https://raw.githubusercontent.com/oerdnj/dns-oarc-keysigning/master/ksp-ba.gpg">ksp-ba.gpg</a> - Participating keys (keyring). </li>
+</ul>
 
 <h2>
 <a id="summary" class="anchor" href="#summary" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary</h2>
@@ -196,9 +198,9 @@ ksp-ba.gpg.bz2 - Participating keys (keyring).
 <p>What to bring with you</p>
 
 <ul>
-<li>A printout of ksp-dc15.txt; check that your fingerprints are correct. </li>
+<li>A printout of <a href="https://raw.githubusercontent.com/oerdnj/dns-oarc-keysigning/master/ksp-ba.txt">ksp-ba.txt</a>; check that your fingerprints are correct. </li>
 <li>A pen. </li>
-<li>The SHA256 hash you made of ksp-dc15.txt so that we can ensure we are all working with the same copy. </li>
+<li>The SHA256 hash you made of <a href="https://raw.githubusercontent.com/oerdnj/dns-oarc-keysigning/master/ksp-ba.txt">ksp-ba.txt</a> so that we can ensure we are all working with the same copy. </li>
 <li>Some form of government issued ID (passport or similar). </li>
 <li>If this is your first keysigning, a copy of this web page and linked documents might be useful. </li>
 </ul>
