--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   gpg --keyserver keys.gnupg.net --send-keys 0xfedcba98 0x76543210 </p>
 </li>
 <li>
-<p>Send your ascii armored, cleaned, minimized and clear-signed public keys to <a href="mailto:ksp@rfc1925.org">ksp@rfc1925.org</a> no later than 23:59 UTC/GMT/Zulu on Sunday 29th of March, 2016. Multiple cross-signed keys per armor are just fine. The signatures will prove the owner of the keys controls the private keys. </p>
+<p>Send your ascii armored, cleaned, minimized and clear-signed public keys to <a href="mailto:ksp-ba@rfc1925.org">ksp-ba@rfc1925.org</a> no later than 23:59 UTC/GMT/Zulu on Sunday 29th of March, 2016. Multiple cross-signed keys per armor are just fine. The signatures will prove the owner of the keys controls the private keys. </p>
 
 <ul>
 <li><p>Please check that your version of gpg does support the export-clean option. </p></li>
@@ -107,17 +107,17 @@
 
 <p>Then email publickeyblock.asc as so: </p>
 
-<pre><code>mail -s "KeySigning Party @ DNS-OARC" ksp@rfc1925.org &lt; publickeyblock.asc 
+<pre><code>mail -s "KeySigning Party @ DNS-OARC" ksp-ba@rfc1925.org &lt; publickeyblock.asc 
 </code></pre>
 
 <p>Same example as a one-liner: </p>
 
-<pre><code>gpg --armor --export-options export-clean,export-minimal --export 0xfedcba98 0x76543210 | gpg --local-user 0xfedcba98 --clearsign --local-user 0x76543210 --clearsign | mail -s "KeySigning Party in Buenos Aires" ksp@rfc1925.org 
+<pre><code>gpg --armor --export-options export-clean,export-minimal --export 0xfedcba98 0x76543210 | gpg --local-user 0xfedcba98 --clearsign --local-user 0x76543210 --clearsign | mail -s "KeySigning Party in Buenos Aires" ksp-ba@rfc1925.org 
 </code></pre>
 
 <p>Another one-liner:</p>
 
-<pre><code>(echo -e "To: ksp@rfc1925.org\nFrom: Your Full Name &lt;name@example.org&gt;\nBcc: name@example.org\nSubject: KeySigning Party in Buenos Aires\n"; gpg --armor --export-options export-clean,export-minimal --export 0xfedcba98 0x76543210 | gpg --local-user 0xfedcba98 --clearsign --local-user 0x76543210 --clearsign) | sendmail -t 
+<pre><code>(echo -e "To: ksp-ba@rfc1925.org\nFrom: Your Full Name &lt;name@example.org&gt;\nBcc: name@example.org\nSubject: KeySigning Party in Buenos Aires\n"; gpg --armor --export-options export-clean,export-minimal --export 0xfedcba98 0x76543210 | gpg --local-user 0xfedcba98 --clearsign --local-user 0x76543210 --clearsign) | sendmail -t 
 </code></pre>
 
 <p>Another one-liner (by Philip Hands): </p>
