--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
 
 <p>Example with two keys 0xfedcba98 and 0x76543210 and uploading to a key server: </p>
 
-<p>gpg --local-user 0xfedcba98 --edit 0x76543210 sign
-  gpg --local-user 0x76543210 --edit 0xfedcba98 sign 
-  gpg --keyserver keys.gnupg.net --send-keys 0xfedcba98 0x76543210 </p>
+<p>gpg --local-user 0xfedcba98 --edit 0x76543210 sign</p>
+
+<p>gpg --local-user 0x76543210 --edit 0xfedcba98 sign </p>
+
+<p>gpg --keyserver keys.gnupg.net --send-keys 0xfedcba98 0x76543210 </p>
 </li>
 <li>
 <p>Send your ascii armored, cleaned, minimized and clear-signed public keys to <a href="mailto:ksp-ba@rfc1925.org">ksp-ba@rfc1925.org</a> no later than 23:59 UTC/GMT/Zulu on Sunday 29th of March, 2016. Multiple cross-signed keys per armor are just fine. The signatures will prove the owner of the keys controls the private keys. </p>
