Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@ mail -s "KeySigning Party in Buenos Aires" pgpsign@dns-oarc.net \
 
 <ul>
 <li>It is very important that you have verified at home the fingerprints of your keys on the hardcopy. </li>
-<li>It is also very important that you have computed the hash at home. </li>
+<li>It is also very important that you have computed the hash at home.</li>
+<li>The goal of the hardcopy is to provide assurance that your copy hasn't been manipulated by third party.  Use whatever method that will suit you to ensure you have untampered copy.  So when I say <em>hardcopy</em> I mean a <em>untampered copy</em> of the text.</li>
 </ul>
 </li>
 <li><p>The SHA256 hash of <a href="https://raw.githubusercontent.com/oerdnj/dns-oarc-keysigning/master/ksp-ba.txt">ksp-ba.txt</a> will be announced during the discussion/information session. Verify that the hashes match what you computed. This guarantees that all participants are working from the same list of keys. </p></li>
